Preuzimanje excel templejta

--- a/src/app/components/uploads/uploads.component.css
+++ b/src/app/components/uploads/uploads.component.css
@@ -45,3 +45,15 @@
 .label {
     cursor: pointer;
 }
+
+.download-template {
+    margin-top: 50px;
+}
+
+.download-template em {
+    color: #56baed;
+}
+
+.download-template label {
+    color: #56baed;
+}
