--- a/src/app/components/uploads/uploads.component.html
+++ b/src/app/components/uploads/uploads.component.html
@@ -4,10 +4,15 @@
     <h3 class="uploadHeading " style="color:#56baed;">Objects</h3>
     <input type="file" #objectFileDropRef (change)="uploadObjectsFile($event)" id="objectFileDropRef" hidden />
 
-
     <h3 style="margin:5%;color:#56baed;">Drag and drop file here</h3>
 
     <label for="objectFileDropRef" class="browseButton">Browse</label>
+
+    <div class="download-template">
+      <em id="download-obj-template" class="fa-solid fa-download fa-2x" (click)="downloadTemplate(1)"></em>
+      <br>
+      <label for="download-obj-template">Download template</label>
+    </div>
 
     <div *ngIf="isObjLoading"
       style="margin-top:15%;display: flex; justify-content: center; align-items: center; background: white;">
@@ -23,10 +28,15 @@
     <h3 class="uploadHeading " style="color:#56baed;">Positions</h3>
     <input type="file" #positionFileDropRef (change)="uploadPositionsFile($event)" id="positionFileDropRef" hidden />
 
-
     <h3 style="margin:5%; color:#56baed;">Drag and drop file here</h3>
 
     <label class="browseButton" for="positionFileDropRef">Browse</label>
+
+    <div class="download-template">
+      <em id="download-obj-template" class="fa-solid fa-download fa-2x" (click)="downloadTemplate(2)"></em>
+      <br>
+      <label for="download-obj-template">Download template</label>
+    </div>
     <div *ngIf="isPosLoading"
       style="margin-top:15%;display: flex; justify-content: center; align-items: center; background: white;">
       <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
