--- a/src/app/dialogs/position-dialog/position-dialog.component.html
+++ b/src/app/dialogs/position-dialog/position-dialog.component.html
@@ -1,9 +1,10 @@
 <div class="container">
     <h3 mat-dialog-title *ngIf="flag == 1">Add position</h3>
     <h3 mat-dialog-title *ngIf="flag == 2">Delete secondary position</h3>
-    <h3 mat-dialog-title *ngIf="flag == 3">Socondary position</h3>
+    <h3 mat-dialog-title *ngIf="flag == 3">Secondary position</h3>
+    <h3 mat-dialog-title *ngIf="flag == 4">Update secondary position</h3>
     <form class="mat-dialog-content" #formControl="ngForm">
-        <div class="form" *ngIf="flag == 1">
+        <div class="form" *ngIf="flag == 1 || flag==4">
             <mat-form-field>
                 <mat-select [(ngModel)]="data.posClassName" placeholder="Secondary Position Class" name="posClassName"
                     required="flag == 1">
@@ -21,16 +22,16 @@
         </div>
 
 
-        <div class="form" *ngIf="flag == 1">
-            <mat-form-field>
-                <mat-select [(ngModel)]="data.posTypeName" placeholder="Secondary Position Type" name="posTypeName"
-                    required="flag == 1">
-                    <mat-option *ngFor="let type of positionTypes" [value]="type.positionTypeName">
-                        {{ type.positionTypeName }}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
+        <div class="form" *ngIf="flag == 1 || flag==4">
+          <mat-form-field>
+              <mat-select [(ngModel)]="data.posTypeName" placeholder="Secondary Position Type" name="posClassType"
+                  required="flag == 1">
+                  <mat-option *ngFor="let type of positionTypes" [value]="type.positionTypeName">
+                      {{ type.positionTypeName }}
+                  </mat-option>
+              </mat-select>
+          </mat-form-field>
+      </div>
         <div class="form" *ngIf="flag == 2 || flag == 3">
             <mat-form-field>
                 <mat-label>Position type</mat-label>
@@ -38,7 +39,7 @@
             </mat-form-field>
         </div>
 
-        <div class="form" *ngIf="flag == 1">
+        <div class="form" *ngIf="flag == 1 || flag==4">
             <mat-form-field>
                 <mat-select [(ngModel)]="data.productCategory" placeholder="Product Category" name="productCategory"
                     required="flag == 1">
@@ -55,7 +56,7 @@
             </mat-form-field>
         </div>
 
-        <div class="form" *ngIf="flag == 1">
+        <div class="form" *ngIf="flag == 1 || flag==4">
             <mat-form-field>
                 <mat-select [(ngModel)]="data.supplier" placeholder="Supplier" name="supplier" required="flag == 1">
                     <mat-option *ngFor="let supplier of suppliers" [value]="supplier">
@@ -71,7 +72,7 @@
             </mat-form-field>
         </div>
 
-        <div class="form" *ngIf="flag == 1">
+        <div class="form" *ngIf="flag == 1 || flag==4">
             <mat-form-field>
                 <mat-select [(ngModel)]="data.location" placeholder="Location" name="location" required="flag == 1">
                     <mat-option *ngFor="let location of locations" [value]="location">
@@ -89,6 +90,8 @@
 
         <div mat-dialog-actions>
             <button class="item2" mat-button *ngIf="flag == 1" type="submit" (click)="add()"
+                [disabled]="!formControl.valid">Ok</button>
+                <button class="item2" mat-button *ngIf="flag == 4" type="submit" (click)="update()"
                 [disabled]="!formControl.valid">Ok</button>
             <button mat-button class="item2" *ngIf="flag == 2" type="submit" (click)="delete()">Delete</button>
             <button mat-button class="item2" (click)="close()">Cancel</button>
