CRUD operacije za proizvode

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -48,10 +48,15 @@
             </a>
         </mat-nav-list>
         <mat-nav-list>
-          <a mat-list-item class="nav-list-item" [routerLink]="['secondaryPosition']">
-              <mat-icon class="nav-icon">fastfood</mat-icon>Secondary Positions
-          </a>
-      </mat-nav-list>
+            <a mat-list-item class="nav-list-item" [routerLink]="['secondaryPosition']">
+                <mat-icon class="nav-icon">fastfood</mat-icon>Secondary Positions
+            </a>
+        </mat-nav-list>
+        <mat-nav-list>
+            <a mat-list-item class="nav-list-item" [routerLink]="['product']">
+                <mat-icon class="nav-icon">fastfood</mat-icon>Products
+            </a>
+        </mat-nav-list>
         <mat-nav-list>
             <a mat-list-item class="nav-list-item" [routerLink]="['uploads']">
                 <mat-icon class="nav-icon">cloud_upload</mat-icon>Upload Files
