--- a/src/app/dialogs/position-dialog/position-dialog.component.css
+++ b/src/app/dialogs/position-dialog/position-dialog.component.css
@@ -22,6 +22,13 @@
     border: 2px solid #39ace7;
 }
 
+.form {
+  display: flex;
+}
+
+.pos-img {
+  justify-content: center;
+}
 
 button:hover {
     color: #fff;
@@ -34,7 +41,7 @@ button[disabled]:hover {
 }
 
 .mat-dialog-content {
-    overflow-y: hidden;
+    overflow-y: auto;
     padding-bottom: 10px;
 }
 
@@ -49,4 +56,22 @@ button {
 }
 ::ng-deep .mat-button-focus-overlay {
     display: none;
+}
+
+.rotate {
+  -webkit-transform: rotate(270deg);
+  -moz-transform: rotate(270deg);
+  -o-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  transform: rotate(270deg);
+}
+
+.horizontal{
+  height: 200px;
+  width:250px;
+}
+
+.vertical{
+  height: 250px;
+  width:200px;
 }
