Export sekundarnih pozicija u excel formatu

--- a/src/app/components/position/position.component.html
+++ b/src/app/components/position/position.component.html
@@ -43,3 +43,5 @@
   </div>
   <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No positions</mat-toolbar>
 </div>
+<br>
+<button mat-raised-button color="primary" class="exportButton" (click)="exportPositions()">Export</button>
