--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <!--display: flex; justify-content: center; align-items: center;-->
 <div *ngIf="loading"
 style="background: white;color:#56baed;margin-top:20%">
-<div><img src="assets\StoreCheckIcon3.png" alt="SC icon" width="400" height="200" class="center noresize"></div>
+<div><img src="assets\StoreMetrics.jpg" alt="SC icon" width="400" height="200" class="center noresize"></div>
 <mat-progress-spinner class="mat-spinner-color center" mode="indeterminate" [diameter]="20">
 </mat-progress-spinner>
 
