--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
 
 
         <div class="fadeIn first">
-            <img src="../../../assets/StoreCheckIcon3.png" id="icon" alt="App Icon" />
+            <img src="../../../assets/StoreMetrics.jpg" id="icon" alt="App Icon" />
         </div>
 
         <form>
