--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -1,5 +1,5 @@
 <div class="center">
-    <img src="assets\StoreCheckIcon3.png" alt="Store Check" class="sc-icon">
+    <img src="assets/StoreMetrics.jpg" alt="Store Check" class="sc-icon">
 </div>
 <div class="menu fadeInDown">
 
