--- a/src/app/components/store-check/store-check.component.css
+++ b/src/app/components/store-check/store-check.component.css
@@ -52,7 +52,8 @@ a {
   line-height: 50px;
   text-align: center;
   border-radius: 10px;
-  font-size: 20px;
+  font-size: 18px;
+  font-weight: bold;
   font-family: sans-serif;
   border: 2px solid #39ace7;
   cursor: pointer;
