--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -44,6 +44,6 @@
   </mat-paginator>
 
   <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No feedbacks</mat-toolbar>
-  <button mat-stroked-button color="primary" class="mat-btn" [routerLink]="['/resolvedFeebacks/', objectIdCompany]">Show
+  <button mat-stroked-button color="primary" style="font-weight:bold;box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);" class="mat-btn" [routerLink]="['/resolvedFeebacks/', objectIdCompany]">Show
     Resolved</button>
 </div>
