--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="menu-btn">
-          <button mat-stroked-button color="primary" class="mat-btn" (click)="loadData(false)"
+          <button  mat-stroked-button color="primary" class="item2" (click)="loadData(false)"
             *ngIf="!isDashboard">Search <mat-icon>search</mat-icon></button>
         </div>
       </div>
