--- a/src/app/components/position/position.component.html
+++ b/src/app/components/position/position.component.html
@@ -26,7 +26,8 @@
           style="margin-left:30%">
           <mat-icon area-label="Delete"> delete </mat-icon>
         </button>
-        <button mat-icon-button color="primary" (click)="openDialog(4,row.secondaryPositionId,row.objectName,row.posClassName,row.posTypeName,row.valid,row.productCategory,row.supplier,row.location,row.img,row.isImgHorizontal); $event.stopPropagation();">
+        <button mat-icon-button color="primary"
+          (click)="openDialog(4,row.secondaryPositionId,row.objectName,row.posClassName,row.posTypeName,row.valid,row.productCategory,row.supplier,row.location,row.img,row.isImgHorizontal); $event.stopPropagation();">
           <mat-icon area-label="Edit">
             edit </mat-icon>
         </button>
@@ -44,4 +45,6 @@
   <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No positions</mat-toolbar>
 </div>
 <br>
-<button mat-raised-button color="primary" class="exportButton" (click)="exportPositions()">Export</button>
+<div *ngIf="positionCheck">
+  <button mat-raised-button color="primary" class="exportButton" style="margin-left: 10px;" (click)="exportPositions()">Export</button>
+</div>
