--- a/src/app/components/choose-object/choose-object.component.css
+++ b/src/app/components/choose-object/choose-object.component.css
@@ -79,22 +79,28 @@ th {
   transition: 0.3s;
 }
 
+
 .item2 {
+
   background-color: white;
   color: #39ace7;
-  width: 150px;
+  width: 100px;
   height: 50px;
   line-height: 50px;
   text-align: center;
   border-radius: 10px;
-  font-size: 80%;
+  font-size: 17px;
+  letter-spacing: 0.5px;
+  font-weight: bold;
+  font-family: sans-serif;
   border: 2px solid #39ace7;
   cursor: pointer;
-  margin: 0 auto;
   position: relative;
-  margin-bottom: 5%;
-  margin-top: 10%;
-  right: 0%;
+  bottom: 1;
+  margin: auto;
+
+  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
+
 
 }
 
