--- a/src/app/components/object/object.component.css
+++ b/src/app/components/object/object.component.css
@@ -137,14 +137,18 @@ h4 {
   line-height: 50px;
   text-align: center;
   border-radius: 10px;
-  font-size: 80%;
+  font-size: 17px;
+  letter-spacing: 0.5px;
+  font-weight: bold;
+  font-family: sans-serif;
   border: 2px solid #39ace7;
   cursor: pointer;
-  margin: 0 auto;
   position: relative;
-  margin-bottom: 5%;
-  margin-top: 5%;
-  right: 0%;
+  bottom: 1;
+  margin: auto;
+
+  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
+;
 
 }
 
