--- a/src/app/components/store-check/store-check.component.css
+++ b/src/app/components/store-check/store-check.component.css
@@ -34,17 +34,20 @@ a {
   text-align: center;
   border-radius: 10px;
   font-family: sans-serif;
-  font-size: 20px;
-
+  font-size: 18px;
+  font-weight: bold;
   border: 2px solid #39ace7;
   cursor: pointer;
+  letter-spacing: 1px;
   margin: auto;
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
+  text-shadow: 2px 2px rgba(0, 0, 0, 0.3);
 
 
 }
 
 .item2 {
+
   background-color: white;
   color: #39ace7;
   width: 100px;
@@ -52,7 +55,8 @@ a {
   line-height: 50px;
   text-align: center;
   border-radius: 10px;
-  font-size: 18px;
+  font-size: 17px;
+  letter-spacing: 0.5px;
   font-weight: bold;
   font-family: sans-serif;
   border: 2px solid #39ace7;
