Izbacen update sekundarnih pozicija

--- a/src/app/components/position/position.component.html
+++ b/src/app/components/position/position.component.html
@@ -26,10 +26,10 @@
           style="margin-left:30%">
           <mat-icon area-label="Delete"> delete </mat-icon>
         </button>
-        <button mat-icon-button color="primary" (click)="openDialog(4,row.secondaryPositionId,row.objectName,row.posClassName,row.posTypeName,row.valid,row.productCategory,row.supplier,row.location,row.img,row.isImgHorizontal); $event.stopPropagation();">
+     <!--  <button mat-icon-button color="primary" (click)="openDialog(4,row.secondaryPositionId,row.objectName,row.posClassName,row.posTypeName,row.valid,row.productCategory,row.supplier,row.location,row.img,row.isImgHorizontal); $event.stopPropagation();">
           <mat-icon area-label="Edit">
             edit </mat-icon>
-        </button>
+        </button>--> 
       </mat-cell>
     </ng-container>
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
