--- a/src/app/components/product/product.component.css
+++ b/src/app/components/product/product.component.css
@@ -32,3 +32,20 @@
 .column-name {
     font-size: 16px;
 }
+
+.price-input {
+    width: 50%;
+}
+
+.header {
+    padding: 40px 0;
+    background-color: #56baed;
+    color: #fff;
+    justify-content: center;
+    align-items: center;
+}
+
+.header h2 {
+    text-transform: uppercase;
+    font-size: 30px;
+}
