--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -6,20 +6,20 @@
     <div *ngIf="menager" class="item start-sc fadeIn first" [routerLink]="['/chooseObject/addStoreCheck']">
         STORE CHECK
     </div>
-    
+
     <div *ngIf="!menager" class="item resolve-fb fadeIn second" [routerLink]="['/chooseObject/resolveFeedbacks']">
         RESOLVE FEEDBACKS
     </div>
 
-    <div  class="item resolve-fb fadeIn second" [routerLink]="['/chooseObject/positions']">
-       SECONDARY POSITIONS
+    <div class="item resolve-fb fadeIn second" [routerLink]="['/chooseObject/positions']">
+        SECONDARY POSITIONS
     </div>
-    <div  class="item resolve-fb fadeIn second" [routerLink]="['/']">
+    <div class="item resolve-fb fadeIn second" [routerLink]="['/product']">
         PRICE SCANNER
     </div>
 
 
-    <div  class="item2 resolve-fb fadeIn third" (click)="logout()">
+    <div class="item2 resolve-fb fadeIn third" (click)="logout()">
         LOG OUT
     </div>
 </div>
