--- a/src/app/components/uploads/uploads.component.html
+++ b/src/app/components/uploads/uploads.component.html
@@ -21,9 +21,6 @@
     </div>
   </div>
 
-
-
-
   <div class="container">
     <h3 class="uploadHeading " style="color:#56baed;">Positions</h3>
     <input type="file" #positionFileDropRef (change)="uploadPositionsFile($event)" id="positionFileDropRef" hidden />
@@ -38,6 +35,27 @@
       <label for="download-obj-template">Download template</label>
     </div>
     <div *ngIf="isPosLoading"
+      style="margin-top:15%;display: flex; justify-content: center; align-items: center; background: white;">
+      <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
+      </mat-progress-spinner>
+    </div>
+  </div>
+
+  <div class="container">
+    <h3 class="uploadHeading " style="color:#56baed;">Products</h3>
+    <input type="file" #productFileDropRef (change)="uploadProductsFile($event)" id="productFileDropRef" hidden />
+
+    <h3 style="margin:5%;color:#56baed;">Drag and drop file here</h3>
+
+    <label for="productFileDropRef" class="browseButton">Browse</label>
+
+    <div class="download-template">
+      <em id="download-obj-template" class="fa-solid fa-download fa-2x" (click)="downloadTemplate(3)"></em>
+      <br>
+      <label for="download-obj-template">Download template</label>
+    </div>
+
+    <div *ngIf="isProdLoading"
       style="margin-top:15%;display: flex; justify-content: center; align-items: center; background: white;">
       <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
       </mat-progress-spinner>
