--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="header">
+<mat-toolbar class="header" *ngIf="showHeader">
     <h2>Price scanner</h2>
 </mat-toolbar>
 
@@ -15,31 +15,31 @@
         <ng-container matColumnDef="productIdCompany">
             <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Id
             </mat-header-cell>
-            <mat-cell *matCellDef="let row">{{ row.productIdCompany }}</mat-cell>
+            <mat-cell *matCellDef="let row" data-label="Id">{{ row.productIdCompany }}</mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="productName">
             <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Product name
             </mat-header-cell>
-            <mat-cell *matCellDef="let row">{{ row.productName }}</mat-cell>
+            <mat-cell *matCellDef="let row" data-label="Product name">{{ row.productName }}</mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="weight">
             <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Weight
             </mat-header-cell>
-            <mat-cell *matCellDef="let row">{{ row.weight }}g</mat-cell>
+            <mat-cell *matCellDef="let row" data-label="Weight">{{ row.weight }}g</mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="manufacturer">
             <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Manufacturer
             </mat-header-cell>
-            <mat-cell *matCellDef="let row">{{ row.manufacturer }}</mat-cell>
+            <mat-cell *matCellDef="let row" data-label="Manufacturer">{{ row.manufacturer }}</mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="price">
             <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Price
             </mat-header-cell>
-            <mat-cell *matCellDef="let row; let i = index">
+            <mat-cell *matCellDef="let row; let i = index" data-label="Price">
                 <form>
                     <mat-form-field class="price-input">
                         <input type="numeric" matInput [formControl]="priceFormControls[i]" name="price"
@@ -55,7 +55,7 @@
         <ng-container matColumnDef="actionPrice">
             <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Action price
             </mat-header-cell>
-            <mat-cell *matCellDef="let row; let i = index">
+            <mat-cell *matCellDef="let row; let i = index" data-label="Action price">
                 <form>
                     <mat-form-field class="price-input">
                         <input type="numeric" matInput [formControl]="actionPriceFormControls[i]" name="actionPrice"
