--- a/src/app/components/product/product.component.css
+++ b/src/app/components/product/product.component.css
@@ -38,6 +38,16 @@
 }
 
 .header {
+    text-align: center;
+    height: 80px;
+    background-color: #56baed;
+    color: #fff;
+    line-height: 80px;
+    font-family: sans-serif;
+    text-transform: uppercase;
+}
+
+/* .header {
     padding: 40px 0;
     background-color: #56baed;
     color: #fff;
@@ -48,7 +58,7 @@
 .header h2 {
     text-transform: uppercase;
     font-size: 30px;
-}
+} */
 
 /* Promena izgleda table */
 @media screen and (max-width: 650px) {
