--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,6 +1,7 @@
-<mat-toolbar class="header" *ngIf="showHeader">
-    <h2>Price scanner</h2>
-</mat-toolbar>
+<div class="header fadeIn first">
+    <img src="assets\StoreCheckIcon3.png" alt="SC icon" width="80" height="80" style="float:left;">
+    <h2 style="height:80px;"> <span>Price scanner</span> </h2>
+</div>
 
 <div class="centered font">
     <mat-form-field>
