Prikaz headera u price scanneru

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="header fadeIn first">
+<div class="header" *ngIf="showHeader">
     <img src="assets\StoreCheckIcon3.png" alt="SC icon" width="80" height="80" style="float:left;">
     <h2 style="height:80px;"> <span>Price scanner</span> </h2>
 </div>
