Prikaz greske kod importa excela

--- a/src/app/components/uploads/uploads.component.html
+++ b/src/app/components/uploads/uploads.component.html
@@ -19,6 +19,7 @@
       <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
       </mat-progress-spinner>
     </div>
+    <p *ngIf="errorMessage">{{errorMessage}}</p>
   </div>
 
   <div class="container">
@@ -63,3 +64,5 @@
   </div>
 
 </div>
+
+<p *ngIf="errorMessage">{{errorMessage}}</p>
