--- a/src/app/dialogs/position-dialog/position-dialog.component.html
+++ b/src/app/dialogs/position-dialog/position-dialog.component.html
@@ -243,6 +243,12 @@
         Delete
       </button>
       <button mat-button class="item2" (click)="close()">Cancel</button>
+      <div *ngIf="isLoading"
+      style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
+      <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
+      </mat-progress-spinner>
     </div>
+    </div>
+
   </form>
 </div>
