--- a/src/app/components/uploads/uploads.component.css
+++ b/src/app/components/uploads/uploads.component.css
@@ -62,3 +62,9 @@
     color: #ff0000;
     margin-left: 20px;
 }
+
+.warning-message{
+   text-align: center;
+   font-size:20px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
