--- a/src/app/components/store-check/store-check.component.css
+++ b/src/app/components/store-check/store-check.component.css
@@ -46,6 +46,28 @@ a {
 
 }
 
+.disableditem {
+  background-color: #8d9294;
+  color: #fff;
+  width: 400px;
+  max-width: 90%;
+  height: 100px;
+  line-height: 100px;
+  text-align: center;
+  border-radius: 10px;
+  font-family: sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  border: 2px solid #39ace7;
+  cursor: pointer;
+  letter-spacing: 1px;
+  margin: auto;
+  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
+  text-shadow: 2px 2px rgba(0, 0, 0, 0.3);
+
+
+}
+
 .item2 {
 
   background-color: white;
