--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -3,18 +3,18 @@
 </div>
 <div class="menu fadeInDown">
 
-    <div *ngIf="menager" class="item start-sc fadeIn first" [routerLink]="['/chooseObject/addStoreCheck']">
+    <div *ngIf="menager" class="disableditem start-sc fadeIn first"> <!-- ENABLE: [routerLink]="['/chooseObject/addStoreCheck']"-->
         STORE CHECK
     </div>
 
-    <div *ngIf="!menager" class="item resolve-fb fadeIn second" [routerLink]="['/chooseObject/resolveFeedbacks']">
+    <div *ngIf="!menager" class="disableditem resolve-fb fadeIn second">  <!-- ENABLE: [routerLink]="['/chooseObject/resolveFeedbacks']"-->
         RESOLVE FEEDBACKS
     </div>
 
     <div class="item resolve-fb fadeIn second" [routerLink]="['/chooseObject/positions']">
         SECONDARY POSITIONS
     </div>
-    <div class="item resolve-fb fadeIn second" [routerLink]="['/product']">
+    <div class="disableditem resolve-fb fadeIn second" > <!-- ENABLE: [routerLink]="['/product']"-->
         PRICE SCANNER
     </div>
 
