--- a/src/app/dialogs/objectdialog/objectdialog.component.html
+++ b/src/app/dialogs/objectdialog/objectdialog.component.html
@@ -6,17 +6,17 @@
   <form class="mat-dialog-content" #formControl="ngForm">
 <div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "ObjectIDRetail" [(ngModel)]="data.objectIdRetail" name = "objectIdRetail" [disabled]="flag==4" required/>
+    <input matInput placeholder = "ObjectIDRetail" [(ngModel)]="data.objectIdRetail" name = "objectIdRetail" [disabled]="flag==4"/>
   </mat-form-field>
 </div>
 <div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "ObjectIDCompany" [(ngModel)]="data.objectIdCompany" name = "objectIdCompany" [disabled]="flag==4" required/>
+    <input matInput placeholder = "ObjectIDCompany" [(ngModel)]="data.objectIdCompany" name = "objectIdCompany" [disabled]="flag==4"/>
   </mat-form-field>
 </div>
 <div class="form" *ngIf="flag !=4 && flag!=3">
   <mat-form-field>
-    <mat-select [(ngModel)]="data.retailer" placeholder="Retailer" name="Retailer" [disabled]="flag==4" required>
+    <mat-select [(ngModel)]="data.retailer" placeholder="Retailer" name="Retailer" [disabled]="flag==4">
 
         <mat-option *ngFor="let retailer of retailers" [value]="retailer.retailerName">
           {{ retailer.retailerName }}
@@ -28,47 +28,47 @@
 
 <div class="form" *ngIf="flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "ObjectFormat" [(ngModel)]="data.objectFormat" name = "objectFormat" [disabled]="flag==4" required/>
+    <input matInput placeholder = "ObjectFormat" [(ngModel)]="data.objectFormat" name = "objectFormat" [disabled]="flag==4"/>
   </mat-form-field>
   <div class="form" *ngIf=" flag!=3">
     <mat-form-field>
-      <input matInput placeholder = "ObjectName" [(ngModel)]="data.objectName" name = "objectName" [disabled]="true" required/>
+      <input matInput placeholder = "ObjectName" [(ngModel)]="data.objectName" name = "objectName" [disabled]="true"/>
     </mat-form-field>
   </div>
   <div class="form" *ngIf=" flag!=3">
     <mat-form-field>
-      <input matInput placeholder = "City" [(ngModel)]="data.city" name = "city" [disabled]="flag==4" required/>
+      <input matInput placeholder = "City" [(ngModel)]="data.city" name = "city" [disabled]="flag==4"/>
     </mat-form-field>
   </div>
   <div class="form" *ngIf="flag!=3">
     <mat-form-field>
-      <input matInput placeholder = "Address" [(ngModel)]="data.address" name = "address" [disabled]="flag==4" required/>
+      <input matInput placeholder = "Address" [(ngModel)]="data.address" name = "address" [disabled]="flag==4"/>
     </mat-form-field>
   </div>
 
   <div class="form"*ngIf=" flag!=3">
     <mat-form-field>
-      <input matInput placeholder = "KAM" [(ngModel)]="data.kam" name = "kam" [disabled]="flag==4" required/>
+      <input matInput placeholder = "KAM" [(ngModel)]="data.kam" name = "kam" [disabled]="flag==4"/>
     </mat-form-field>
     </div>
     <div class="form"*ngIf="flag!=3">
       <mat-form-field>
-        <input matInput placeholder = "Merchandiser" [(ngModel)]="data.merchandiser" name = "merchandiser" [disabled]="flag==4" required/>
+        <input matInput placeholder = "Merchandiser" [(ngModel)]="data.merchandiser" name = "merchandiser" [disabled]="flag==4"/>
       </mat-form-field>
       </div>
       <div class="form"*ngIf=" flag!=3">
         <mat-form-field>
-          <input matInput placeholder = "Director" [(ngModel)]="data.director" name = "director" [disabled]="flag==4" required/>
+          <input matInput placeholder = "Director" [(ngModel)]="data.director" name = "director" [disabled]="flag==4"/>
         </mat-form-field>
         </div>
         <div class="form"*ngIf=" flag!=3">
           <mat-form-field>
-            <input matInput placeholder = "Commercialist" [(ngModel)]="data.commercialist" name = "commercialist" [disabled]="flag==4" required/>
+            <input matInput placeholder = "Commercialist" [(ngModel)]="data.commercialist" name = "commercialist" [disabled]="flag==4"/>
           </mat-form-field>
           </div>
           <div class="form"*ngIf=" flag!=3">
             <mat-form-field>
-              <input matInput placeholder = "Supervisor" [(ngModel)]="data.supervisor" name = "supervisor" [disabled]="flag==4" required/>
+              <input matInput placeholder = "Supervisor" [(ngModel)]="data.supervisor" name = "supervisor" [disabled]="flag==4"/>
             </mat-form-field>
             </div>
 
@@ -76,12 +76,12 @@
 
 <div class="form" *ngIf=" flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "RequisitionDays" [(ngModel)]="data.requisitionDays" name = "requisitionDays" [disabled]=" flag==4" required/>
+    <input matInput placeholder = "RequisitionDays" [(ngModel)]="data.requisitionDays" name = "requisitionDays" [disabled]=" flag==4"/>
   </mat-form-field>
 </div>
 <div class="form" *ngIf="flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "MerchandiserRevisionDays" [(ngModel)]="data.merchandiserRevisionDays" name = "merchandiserRevisionDays" [disabled]=" flag==4" required/>
+    <input matInput placeholder = "MerchandiserRevisionDays" [(ngModel)]="data.merchandiserRevisionDays" name = "merchandiserRevisionDays" [disabled]=" flag==4"/>
   </mat-form-field>
 </div>
 
