--- a/src/app/dialogs/position-dialog/position-dialog.component.html
+++ b/src/app/dialogs/position-dialog/position-dialog.component.html
@@ -168,9 +168,9 @@
           hidden
           capture="camera"
         />
-        <label style="margin-bottom:5% " *ngIf="flag!=2">Take photo:</label>
+        <label style="margin-bottom:5% " *ngIf="flag!=2 && flag !=3">Take photo:</label>
 
-        <label for="inputFile" class="browseFile" *ngIf="flag!=2">
+        <label for="inputFile" class="browseFile" *ngIf="flag!=2 && flag != 3">
           <img
             src="assets\photoicon.png"
             width="10%"
@@ -206,10 +206,10 @@
           hidden
           capture="camera"
         />
-        <label *ngIf="data.img && data.img != 'undefined' && flag !=2" style="margin-bottom:5%">Update photo:</label>
-        <label *ngIf="!data.img || data.img == 'undefined' && flag !=2" style="margin-bottom:5%">Take photo:</label>
+        <label *ngIf="data.img && data.img != 'undefined' && flag !=2 && flag != 3" style="margin-bottom:5%">Update photo:</label>
+        <label *ngIf="!data.img || data.img == 'undefined' && flag !=2 && flag != 3" style="margin-bottom:5%">Take photo:</label>
 
-        <label for="inputFile" class="browseFile" *ngIf="flag!=2">
+        <label for="inputFile" class="browseFile" *ngIf="flag!=2 && flag != 3">
           <img
             src="assets\photoicon.png"
             width="10%"
