--- a/src/app/components/choose-object/choose-object.component.html
+++ b/src/app/components/choose-object/choose-object.component.html
@@ -2,7 +2,7 @@
 
     <div class="header fadeIn first">
 
-        <img src="assets\StoreCheckIcon3.png" alt="SC icon" width="80" height="80" style="float:left;">
+        <img src="assets\StoreMetrics.jpg" alt="SC icon" width="80" height="80" style="float:left;">
         <h2 style="height:80px;"> <span>Choose Object</span> </h2>
 
     </div>
