--- a/src/app/components/store-check/store-check.component.css
+++ b/src/app/components/store-check/store-check.component.css
@@ -27,10 +27,10 @@ a {
 .item {
   background-color: #39ace7;
   color: #fff;
-  width: 400px;
+  width: 300px;
   max-width: 90%;
-  height: 100px;
-  line-height: 100px;
+  height: 80px;
+  line-height: 80px;
   text-align: center;
   border-radius: 10px;
   font-family: sans-serif;
@@ -191,6 +191,7 @@ a {
   display: flex;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: -20px;
   width: 50%;
   align-items: center;
   justify-content: center;
