--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -17,6 +17,9 @@
     <div class="item resolve-fb fadeIn second" [routerLink]="['/product']">
         PRICE SCANNER
     </div>
+    <div class="item resolve-fb fadeIn second">
+       RETURNS
+    </div>
 
 
     <div class="item2 resolve-fb fadeIn third" (click)="logout()">
