--- a/src/app/components/retailer/retailer.component.html
+++ b/src/app/components/retailer/retailer.component.html
@@ -34,7 +34,7 @@
         <button mat-icon-button color="primary">
           <mat-icon (click)="openDialog(3,row.retailerName,row.planogramPdf)"> delete </mat-icon>
         </button>
-        <button mat-icon-button color="primary" (click)="openDialog(2,row.retailerName,row.planogramPdf)"> Add planogram
+        <button mat-icon-button color="primary" style="margin-left: 20px;" (click)="openDialog(2,row.retailerName,row.planogramPdf)"> Add planogram
         </button>
 
 
