--- a/src/app/charts/number-card-chart/number-card-chart.component.css
+++ b/src/app/charts/number-card-chart/number-card-chart.component.css
@@ -4,30 +4,73 @@
     /* background-color: green; */
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1499px) {
+    .card-body {
+        width: 1100px;
+        /* background-color: yellow; */
+    }
+}
+
+@media screen and (max-width: 1389px) {
     .card-body {
         width: 1000px;
         /* background-color: yellow; */
     }
 }
+@media screen and (max-width: 1280px) {
+    .card-body {
+        width: 900px;
+        /* background-color: yellow; */
+    }
+}
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1150px) {
     .card-body {
         width: 800px;
         /* background-color: red; */
     }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1050px) {
     .card-body {
-        width: 600px;
+        width: 700px;
         /* background-color: blue; */
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 950px) {
+    .card-body {
+        width: 600px;
+        height: 210px;
+        /* background-color: brown; */
+    }
+}
+@media screen and (max-width: 750px) {
+    .card-body {
+        width: 500px;
+        height: 210px;
+        /* background-color: brown; */
+    }
+}
+@media screen and (max-width: 650px) {
     .card-body {
         width: 400px;
+        height: 210px;
+        /* background-color: brown; */
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .card-body {
+        width: 300px;
+        height: 210px;
+        /* background-color: brown; */
+    }
+}
+@media screen and (max-width: 450px) {
+    .card-body {
+        width: 200px;
+        height: 210px;
         /* background-color: brown; */
     }
 }
