--- a/src/app/components/object/object.component.css
+++ b/src/app/components/object/object.component.css
@@ -146,6 +146,7 @@ h4 {
   position: relative;
   bottom: 1;
   margin: auto;
+  margin-left: 5px;
 
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
 ;
