--- a/src/app/components/store-check/store-check.component.css
+++ b/src/app/components/store-check/store-check.component.css
@@ -191,7 +191,8 @@ a {
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: -20px;
+  margin-bottom: -30px;
+  margin-top: -10px;
   width: 50%;
   align-items: center;
   justify-content: center;
