Exit dugme u proizvodima

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -101,3 +101,5 @@
         [length]="length" (page)="loadDataOnPageEvent($event)">
     </mat-paginator> -->
 </div>
+
+<button mat-stroked-button color="primary" class="item2" (click)="exit()">Exit</button>
