--- a/src/app/components/product/product.component.css
+++ b/src/app/components/product/product.component.css
@@ -47,6 +47,33 @@
     text-transform: uppercase;
 }
 
+.item2 {
+    background-color: white;
+    color: #39ace7;
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 17px;
+    letter-spacing: 0.5px;
+    font-weight: bold;
+    font-family: sans-serif;
+    border: 2px solid #39ace7;
+    cursor: pointer;
+    position: relative;
+    bottom: 1;
+    display: block;
+    margin: 30px auto;
+    box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
+}
+
+.item2:hover {
+    background-color: #39ace7;
+    color: #fff;
+    transition: 0.3s;
+}
+
 /* Promena izgleda table */
 @media screen and (max-width: 650px) {
     .mat-table {
