--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -9,9 +9,9 @@
 
             <h2 *ngIf="object" class="flex2">{{object.objectName}}</h2>
 
-            <div *ngIf="!positionCheck">
-            <em class="fa-solid fa-file-powerpoint fa-3x flex3" style="margin-right: 10%;margin-top: 5%;"
-                (click)="openPlanogramDialog()"></em>
+            <div *ngIf="workModel !== 'position'">
+                <em class="fa-solid fa-file-powerpoint fa-3x flex3" style="margin-right: 10%;margin-top: 5%;"
+                    (click)="openPlanogramDialog()"></em>
             </div>
         </div>
         <div class="object-info-data" *ngIf="showDetails">
@@ -43,32 +43,40 @@
 
             <div class="object-info-slider">
                 <div class="card">
-                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.shelfSpaceM }}</strong></div>Shelf Space M
+                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.shelfSpaceM }}</strong></div>Shelf Space
+                    M
                 </div>
                 <div class="card">
-                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.companyShelfSpaceM }}</strong></div>Company Shelf
+                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.companyShelfSpaceM }}</strong></div>
+                    Company Shelf
                     Space M
                 </div>
                 <div class="card">
-                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.companyShelfSpacePercent }}</strong></div>Company
+                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.companyShelfSpacePercent }}</strong>
+                    </div>Company
                     Shelf Space %
                 </div>
                 <div class="card2">
-                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.gainings12Mrsd.toLocaleString() }}</strong></div>
+                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.gainings12Mrsd.toLocaleString()
+                            }}</strong></div>
                     Gainings 12M (RSD,mil)
                 </div>
                 <div class="card">
-                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.gainingsVs12mpercent }}</strong></div>Gainings VS
+                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.gainingsVs12mpercent }}</strong></div>
+                    Gainings VS
                     12M %
                 </div>
                 <div class="card">
-                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.wdpercentSerbia }}</strong></div>WD % Serbia
+                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.wdpercentSerbia }}</strong></div>WD %
+                    Serbia
                 </div>
                 <div class="card">
-                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.wdpercentSector }}</strong></div>WD % Sector
+                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.wdpercentSector }}</strong></div>WD %
+                    Sector
                 </div>
                 <div class="card">
-                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.wdpercentCustomer }}</strong></div>WD % Customer
+                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.wdpercentCustomer }}</strong></div>WD %
+                    Customer
                 </div>
             </div>
         </div>
@@ -84,25 +92,27 @@
     </div>
 
     <div class="main fadeIn second">
-        <div *ngIf="!positionCheck">
+        <div *ngIf="">
             <h3>UNRESOLVED FEEDBACKS:</h3>
-            <app-feedback [objectIdCompany]="objectIdCompany" [resolveFeedbacks]="resolveFeedbacks"
+            <app-feedback [objectIdCompany]="objectIdCompany" [resolveFeedbacks]="workModel === 'resolveFeedbacks'"
                 (showFinishButton)="enableFinishButton($event)"></app-feedback>
         </div>
         <div>
-         <br>
+            <br>
         </div>
-        <div *ngIf="!resolveFeedbacks">
-        <h3>SECONDARY POSITIONS:</h3>
+        <div *ngIf="workModel !== 'position'">
+            <h3>SECONDARY POSITIONS:</h3>
 
-        <app-position [objectIdCompany]="objectIdCompany" [resolveFeedbacks]="resolveFeedbacks" [positionCheck]="positionCheck"
-            (showFinishButton)="enableFinishButton($event)"></app-position>
+            <app-position [objectIdCompany]="objectIdCompany" [resolveFeedbacks]="workModel === 'resolveFeedbacks'"
+                [positionCheck]="workModel === 'position'" (showFinishButton)="enableFinishButton($event)">
+            </app-position>
         </div>
         <div class="margintop">
             <button mat-stroked-button color="primary" class="item2" (click)="addToStoreCheck()"
-                *ngIf="showFinishButton && !resolveFeedbacks">Add</button>
-            <button mat-stroked-button color="primary" class="item2" style="margin-bottom: 10px; margin-left:10px;" (click)="exit()">Exit</button>
+                *ngIf="showFinishButton && workModel === 'addStoreCheck'">Add</button>
+            <button mat-stroked-button color="primary" class="item2" style="margin-bottom: 10px; margin-left:10px;"
+                (click)="exit()">Exit</button>
         </div>
-   
+
     </div>
 </div>
