--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -17,7 +17,7 @@
     <div class="disableditem resolve-fb fadeIn second" > <!-- ENABLE: [routerLink]="['/product']"-->
         PRICE SCANNER
     </div>
-    <div class="item resolve-fb fadeIn second">
+    <div class="disableditem resolve-fb fadeIn second">
        RETURNS
     </div>
 
