--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -100,7 +100,7 @@
         <div>
             <br>
         </div>
-        <div *ngIf="workModel !== 'positions'">
+        <div *ngIf="workModel !== 'resolveFeedbacks'">
             <h3>SECONDARY POSITIONS:</h3>
 
             <app-position [objectIdCompany]="objectIdCompany" [resolveFeedbacks]="workModel === 'resolveFeedbacks'"
